Adicionando novo codigo com video para uso site

--- a/index.html
+++ b/index.html
@@ -306,18 +306,20 @@
             </a>
 
             <!-- Card Painel de Atendimento -->
-            <a href="Atendimento4.html" class="card-central card-painel" target="_blank">
+            <a href="Painelmonitor.html" class="card-central card-painel" target="_blank">
                 <i class="fas fa-tv"></i>
                 <h2>Painel de Atendimento</h2>
                 <p>Exiba números e informações</p>
             </a>
 
             <!-- Card Painel Monitor -->
-            <a href="Painelmonitor.html" class="card-central card-painel-monitor" target="_blank">
-                <i class="fas fa-monitor"></i>
-                <h2>Painel Monitor</h2>
-                <p>Monitore atendimentos em tempo real</p>
-            </a>
+           <!-- Card Agendamento -->
+<a href="Agendamento2.html" class="card-central card-agendamento" target="_blank">
+    <i class="fas fa-clipboard-list"></i>
+    <h2>Agendamento</h2>
+    <p>Marque seus compromissos</p>
+</a>
+
 
             <!-- Card Feedback -->
             <a href="Feedback.html" class="card-central card-feedback" target="_blank">
