--- a/Atendimento4.html
+++ b/Atendimento4.html
@@ -244,21 +244,16 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-4 mt-3">
-                <div class="card">
-                    <div class="card-header bg-secondary text-white">
-                        <h2>Mídia</h2>
-                    </div>
-                    <div class="card-body">
-                        <div class="owl-carousel" id="videoCarousel">
-                            <div class="item"><video src="video1.mp4" autoplay loop muted></video></div>
-                            <div class="item"><video src="video2.mp4" autoplay loop muted></video></div>
-                            <div class="item"><video src="video3.mp4" autoplay loop muted></video></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+          <div class="col-12 col-md-4 mt-3">
+    <div class="card h-100" style="overflow: hidden;">
+        <div class="card-body p-0 d-flex align-items-center bg-white">
+            <video autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
+                <source src="video/video_380.webm" type="video/webm">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
+        </div>
+    </div>
+</div>
             <div class="col-12 col-md-4 mt-3">
                 <div class="card">
                     <div class="card-header bg-success text-white">
