--- a/Painelmonitor.html
+++ b/Painelmonitor.html
@@ -483,7 +483,7 @@
     <div class="card h-100" style="overflow: hidden;">
         <div class="card-body p-0 d-flex align-items-center bg-white">
             <video autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
-                <source src="video/video_380.webm" type="video/webm">
+                <source src="video_380.webm" type="video/webm">
                 Seu navegador não suporta a tag de vídeo.
             </video>
         </div>
